--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2> this is h1</h2>
     <h3> this is h1</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt sed dicta sequi nam quo at, tempora explicabo a! Nostrum dolorum veniam recusandae, laborum laudantium, tenetur officiis accusantium voluptatem animi laboriosam, eveniet dolore. Dicta dolorem eius, nobis ipsam illo modi soluta!</p>
+    <img src="red-black.jpg" alt="">
 </body>
 </html>
