--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1> this is h1</h1>
     <h2> this is h1</h2>
     <h3> this is h1</h3>
+    <strong> Touch you body stop your mouth</strong>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt sed dicta sequi nam quo at, tempora explicabo a! Nostrum dolorum veniam recusandae, laborum laudantium, tenetur officiis accusantium voluptatem animi laboriosam, eveniet dolore. Dicta dolorem eius, nobis ipsam illo modi soluta!</p>
     <img src="Year-Students.jpg" alt="">
+
 </body>
 </html>
